2009-06-20  Hans Boehm <Hans.Boehm@hp.com>
	
	* allchblk.c (GC_allochblk_nth): Add assertion.
	* checksums.c: Add GC_record_fault, GC_was_faulted,
	CC_n_faulted_dirty_errors.
	(GC_check_dirty): Remove register declarations, print
	dirty bit errors on faulted pages.
	* os_dep.c (GC_write_fault_handler): Call GC_record_fault().
	* os_dep.c (GC_remove_protection): Compute index correctly.

2009-06-12  Hans Boehm <Hans.Boehm@hp.com>
	
	* include/gc_version.h, configure.ac, doc/README:
	Change to version 7.2alpha3.
	* configure: Regenerate.

[7.2alpha2]

2009-06-12  Hans Boehm <Hans.Boehm@hp.com>
	
	* include/gc_version.h, configure.ac, doc/README:
	Change to version 7.2alpha2.
	* configure: Regenerate.

2009-06-12  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Ivan Maidanski)
	diff98_cvs(resembling diff3, diff27, diff59, diff61, diff66,
	diff73 partly)

        * dbg_mlc.c (GC_print_smashed_obj): Convert a group of printf()
        calls into a single one (for output atomicity).
        * typd_mlc.c (GC_calloc_explicitly_typed): Don't declare and use
        GC_finalization_failures variable; check the result of
        GC_general_register_disappearing_link() (for lack of memory)
        instead.
        * finalize.c (GC_finalization_failures): Remove unused global
        variable.
        * finalize.c (GC_general_register_disappearing_link,
        GC_general_register_disappearing_link): Don't update the value of
        GC_finalization_failures (since unused).
        * include/private/gc_pmark.h (PUSH_ONE_CHECKED_STACK,
        GC_PUSH_ONE_STACK, GC_PUSH_ONE_HEAP): The first parameter is of
        word type now (as FIXUP_POINTER requires numeric argument).
        * finalize.c (GC_ignore_self_finalize_mark_proc): GC_PUSH_ONE_HEAP
        requires the first parameter of word type.
        * mark.c (PUSH_GRANULE): Ditto.
        * mark.c (GC_push_one, GC_push_all_eager): Ditto (for
        GC_PUSH_ONE_STACK).