@@ -1,3 +1,8 @@
+2009-07-10  Hans Boehm <Hans.Boehm@hp.com>
+
+	* finalize.c (GC_finalize_all): Always call GC_invoke_finalizers
+	instead, following Ivan's original patch.
+
 2009-06-20  Hans Boehm <Hans.Boehm@hp.com>
 	
 	* allchblk.c (GC_allochblk_nth): Add assertion.
